# bn-normalizer-rs

./: .gitignore  .venv  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
benches/: word_benchmark.rs
docs/: DIVERGENCES.md  plan.md
references/: CONTEXT.md  README.md
src/: langs.rs  lib.rs  python.rs
src/sentence/: mod.rs  tokenizer.rs
src/word/: mod.rs  ops.rs
tests/: fuzz_results.json  fuzz_stress.py  generate_oracle.py  oracle_builtin_sample.jsonl  test_and_generate_oracle.py  validate_oracle.rs
tests/data/: corpus_sample.txt  oracle_summary.txt
