[package]
name = "bn-normalize-rs"
version = "0.1.0"
edition = "2024"
description = "Fast Bangla Unicode text normalization — a faithful Rust port of bnunicodenormalizer"
license = "MIT"
repository = "https://github.com/ahmed-farhanur-rashid/bn-normalizer-rs"
keywords = ["bangla", "bengali", "unicode", "normalization", "nlp"]
categories = ["text-processing", "internationalization"]

[dependencies]
once_cell = "1"

[dev-dependencies]
