[package]
name = "bn-normalize-rs"
version = "0.1.0"
edition = "2024"
authors = ["Ahmed Farhanur Rashid"]
description = "Fast Bangla Unicode text normalization — a faithful Rust port of bnunicodenormalizer"
license = "MIT"
repository = "https://github.com/ahmed-farhanur-rashid/bn-normalizer-rs"
keywords = ["bangla", "bengali", "unicode", "normalization", "nlp"]
categories = ["text-processing", "internationalization"]

[lib]
name = "bn_normalize_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1"
pyo3 = { version = "0.24", features = ["extension-module"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "word_benchmark"
harness = false
