[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bn-normalize-rs"
version = "0.1.0"
description = "Fast Bangla Unicode text normalization — Rust-powered Python library"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["bangla", "bengali", "unicode", "normalization", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Linguistic",
]

[tool.maturin]
features = []
